# pppp

./: .gitignore  LICENCE  README.md  pyproject.toml
src/pppp/: __init__.py  descriptor.py  pppp.py
src/pppp_zwb/: pppp.py
test/: pppp.py  test_pppp.py
tests/: pppp.py
