[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pppp_zwb"
version = "0.0.1"
authors = [
  { name="Volodymyr Zawatsky", email="volodymyr.zawatsky@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/madzwb/pppp"
"Bug Tracker" = "https://github.com/madzwb/pppp/issues"
