[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pppp"
version = "0.0.1"
authors = [
  { name="Volodymyr Zawatsky", email="volodymyr.zawatsky@gmail.com" },
]
description = "Runtime attribute access like in C++, aka private, protected, public(by default)."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/madzwb/pppp"
"Bug Tracker" = "https://github.com/madzwb/pppp/issues"
